--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "bugs": {
         "url": "https://github.com/Ivan-Istomin/theoceanx-problems/issues"
     },
-    "description": "Solving problems from their series of articles Algorithmic trading 101",
+    "description":
+        "Solving problems from their series of articles Algorithmic trading 101",
     "scripts": {
         "problem_00": "babel-watch src/problem_00.js",
         "problem_01": "babel-watch src/problem_01.js",
@@ -29,9 +30,10 @@
         "date-fns": "^1.29.0",
         "dotenv": "^5.0.1",
         "ramda": "^0.25.0",
-        "the-ocean-x": "^0.4.10"
+        "the-ocean-x": "^0.4.11"
     },
     "devDependencies": {
+        "babel-cli": "^6.26.0",
         "babel-core": "^6.26.3",
         "babel-preset-es2015": "^6.24.1",
         "babel-watch": "^2.0.7"
